antlr/grammar/generated/cruleParser.cpp

// Generated from crule.g4 by ANTLR 4.9.2


#include "cruleListener.h"
#include "cruleVisitor.h"

#include "cruleParser.h"


using namespace antlrcpp;
using namespace rule_engine;
using namespace antlr4;

cruleParser::cruleParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

cruleParser::~cruleParser() {
  delete _interpreter;
}

std::string cruleParser::getGrammarFileName() const {
  return "crule.g4";
}

const std::vector<std::string>& cruleParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& cruleParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- CrlContext ------------------------------------------------------------------

cruleParser::CrlContext::CrlContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* cruleParser::CrlContext::EOF() {
  return getToken(cruleParser::EOF, 0);
}

std::vector<cruleParser::RuleEntryContext *> cruleParser::CrlContext::ruleEntry() {
  return getRuleContexts<cruleParser::RuleEntryContext>();
}

cruleParser::RuleEntryContext* cruleParser::CrlContext::ruleEntry(size_t i) {
  return getRuleContext<cruleParser::RuleEntryContext>(i);
}


size_t cruleParser::CrlContext::getRuleIndex() const {
  return cruleParser::RuleCrl;
}

void cruleParser::CrlContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cruleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCrl(this);
}

void cruleParser::CrlContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cruleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCrl(this);
}


antlrcpp::Any cruleParser::CrlContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<cruleVisitor*>(visitor))
    return parserVisitor->visitCrl(this);
  else
    return visitor->visitChildren(this);
}

cruleParser::CrlContext* cruleParser::crl() {
  CrlContext *_localctx = _tracker.createInstance<CrlContext>(_ctx, getState());
  enterRule(_localctx, 0, cruleParser::RuleCrl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(71);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == cruleParser::RULE) {
      setState(68);
      ruleEntry();
      setState(73);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(74);
    match(cruleParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RuleEntryContext ------------------------------------------------------------------

cruleParser::RuleEntryContext::RuleEntryContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* cruleParser::RuleEntryContext::RULE() {
  return getToken(cruleParser::RULE, 0);
}

cruleParser::RuleNameContext* cruleParser::RuleEntryContext::ruleName() {
  return getRuleContext<cruleParser::RuleNameContext>(0);
}

tree::TerminalNode* cruleParser::RuleEntryContext::LR_BRACE() {
  return getToken(cruleParser::LR_BRACE, 0);
}

cruleParser::IfScopeContext* cruleParser::RuleEntryContext::ifScope() {
  return getRuleContext<cruleParser::IfScopeContext>(0);
}

cruleParser::ThenScopeContext* cruleParser::RuleEntryContext::thenScope() {
  return getRuleContext<cruleParser::ThenScopeContext>(0);
}

tree::TerminalNode* cruleParser::RuleEntryContext::RR_BRACE() {
  return getToken(cruleParser::RR_BRACE, 0);
}

cruleParser::RuleDescriptionContext* cruleParser::RuleEntryContext::ruleDescription() {
  return getRuleContext<cruleParser::RuleDescriptionContext>(0);
}

cruleParser::SalienceContext* cruleParser::RuleEntryContext::salience() {
  return getRuleContext<cruleParser::SalienceContext>(0);
}


size_t cruleParser::RuleEntryContext::getRuleIndex() const {
  return cruleParser::RuleRuleEntry;
}

void cruleParser::RuleEntryContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cruleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRuleEntry(this);
}

void cruleParser::RuleEntryContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cruleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRuleEntry(this);
}


antlrcpp::Any cruleParser::RuleEntryContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<cruleVisitor*>(visitor))
    return parserVisitor->visitRuleEntry(this);
  else
    return visitor->visitChildren(this);
}

cruleParser::RuleEntryContext* cruleParser::ruleEntry() {
  RuleEntryContext *_localctx = _tracker.createInstance<RuleEntryContext>(_ctx, getState());
  enterRule(_localctx, 2, cruleParser::RuleRuleEntry);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(76);
    match(cruleParser::RULE);
    setState(77);
    ruleName();
    setState(79);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == cruleParser::DQUOTA_STRING

    || _la == cruleParser::SQUOTA_STRING) {
      setState(78);
      ruleDescription();
    }
    setState(82);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == cruleParser::SALIENCE) {
      setState(81);
      salience();
    }
    setState(84);
    match(cruleParser::LR_BRACE);
    setState(85);
    ifScope();
    setState(86);
    thenScope();
    setState(87);
    match(cruleParser::RR_BRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SalienceContext ------------------------------------------------------------------

cruleParser::SalienceContext::SalienceContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* cruleParser::SalienceContext::SALIENCE() {
  return getToken(cruleParser::SALIENCE, 0);
}

cruleParser::IntegerLiteralContext* cruleParser::SalienceContext::integerLiteral() {
  return getRuleContext<cruleParser::IntegerLiteralContext>(0);
}


size_t cruleParser::SalienceContext::getRuleIndex() const {
  return cruleParser::RuleSalience;
}

void cruleParser::SalienceContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cruleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSalience(this);
}

void cruleParser::SalienceContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cruleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSalience(this);
}


antlrcpp::Any cruleParser::SalienceContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<cruleVisitor*>(visitor))
    return parserVisitor->visitSalience(this);
  else
    return visitor->visitChildren(this);
}

cruleParser::SalienceContext* cruleParser::salience() {
  SalienceContext *_localctx = _tracker.createInstance<SalienceContext>(_ctx, getState());
  enterRule(_localctx, 4, cruleParser::RuleSalience);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(89);
    match(cruleParser::SALIENCE);
    setState(90);
    integerLiteral();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RuleNameContext ------------------------------------------------------------------

cruleParser::RuleNameContext::RuleNameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* cruleParser::RuleNameContext::SIMPLENAME() {
  return getToken(cruleParser::SIMPLENAME, 0);
}


size_t cruleParser::RuleNameContext::getRuleIndex() const {
  return cruleParser::RuleRuleName;
}

void cruleParser::RuleNameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cruleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRuleName(this);
}

void cruleParser::RuleNameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cruleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRuleName(this);
}


antlrcpp::Any cruleParser::RuleNameContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<cruleVisitor*>(visitor))
    return parserVisitor->visitRuleName(this);
  else
    return visitor->visitChildren(this);
}

cruleParser::RuleNameContext* cruleParser::ruleName() {
  RuleNameContext *_localctx = _tracker.createInstance<RuleNameContext>(_ctx, getState());
  enterRule(_localctx, 6, cruleParser::RuleRuleName);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(92);
    match(cruleParser::SIMPLENAME);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RuleDescriptionContext ------------------------------------------------------------------

cruleParser::RuleDescriptionContext::RuleDescriptionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* cruleParser::RuleDescriptionContext::DQUOTA_STRING() {
  return getToken(cruleParser::DQUOTA_STRING, 0);
}

tree::TerminalNode* cruleParser::RuleDescriptionContext::SQUOTA_STRING() {
  return getToken(cruleParser::SQUOTA_STRING, 0);
}


size_t cruleParser::RuleDescriptionContext::getRuleIndex() const {
  return cruleParser::RuleRuleDescription;
}

void cruleParser::RuleDescriptionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cruleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRuleDescription(this);
}

void cruleParser::RuleDescriptionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cruleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRuleDescription(this);
}


antlrcpp::Any cruleParser::RuleDescriptionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<cruleVisitor*>(visitor))
    return parserVisitor->visitRuleDescription(this);
  else
    return visitor->visitChildren(this);
}

cruleParser::RuleDescriptionContext* cruleParser::ruleDescription() {
  RuleDescriptionContext *_localctx = _tracker.createInstance<RuleDescriptionContext>(_ctx, getState());
  enterRule(_localctx, 8, cruleParser::RuleRuleDescription);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(94);
    _la = _input->LA(1);
    if (!(_la == cruleParser::DQUOTA_STRING

    || _la == cruleParser::SQUOTA_STRING)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfScopeContext ------------------------------------------------------------------

cruleParser::IfScopeContext::IfScopeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* cruleParser::IfScopeContext::IF() {
  return getToken(cruleParser::IF, 0);
}

cruleParser::ExpressionContext* cruleParser::IfScopeContext::expression() {
  return getRuleContext<cruleParser::ExpressionContext>(0);
}


size_t cruleParser::IfScopeContext::getRuleIndex() const {
  return cruleParser::RuleIfScope;
}

void cruleParser::IfScopeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cruleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIfScope(this);
}

void cruleParser::IfScopeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cruleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIfScope(this);
}


antlrcpp::Any cruleParser::IfScopeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<cruleVisitor*>(visitor))
    return parserVisitor->visitIfScope(this);
  else
    return visitor->visitChildren(this);
}

cruleParser::IfScopeContext* cruleParser::ifScope() {
  IfScopeContext *_localctx = _tracker.createInstance<IfScopeContext>(_ctx, getState());
  enterRule(_localctx, 10, cruleParser::RuleIfScope);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(96);
    match(cruleParser::IF);
    setState(97);
    expression(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ThenScopeContext ------------------------------------------------------------------

cruleParser::ThenScopeContext::ThenScopeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* cruleParser::ThenScopeContext::THEN() {
  return getToken(cruleParser::THEN, 0);
}

cruleParser::ThenExpressionListContext* cruleParser::ThenScopeContext::thenExpressionList() {
  return getRuleContext<cruleParser::ThenExpressionListContext>(0);
}


size_t cruleParser::ThenScopeContext::getRuleIndex() const {
  return cruleParser::RuleThenScope;
}

void cruleParser::ThenScopeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cruleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterThenScope(this);
}

void cruleParser::ThenScopeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cruleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitThenScope(this);
}


antlrcpp::Any cruleParser::ThenScopeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<cruleVisitor*>(visitor))
    return parserVisitor->visitThenScope(this);
  else
    return visitor->visitChildren(this);
}

cruleParser::ThenScopeContext* cruleParser::thenScope() {
  ThenScopeContext *_localctx = _tracker.createInstance<ThenScopeContext>(_ctx, getState());
  enterRule(_localctx, 12, cruleParser::RuleThenScope);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(99);
    match(cruleParser::THEN);
    setState(100);
    thenExpressionList();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ThenExpressionListContext ------------------------------------------------------------------

cruleParser::ThenExpressionListContext::ThenExpressionListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<cruleParser::ThenExpressionContext *> cruleParser::ThenExpressionListContext::thenExpression() {
  return getRuleContexts<cruleParser::ThenExpressionContext>();
}

cruleParser::ThenExpressionContext* cruleParser::ThenExpressionListContext::thenExpression(size_t i) {
  return getRuleContext<cruleParser::ThenExpressionContext>(i);
}

std::vector<tree::TerminalNode *> cruleParser::ThenExpressionListContext::SEMICOLON() {
  return getTokens(cruleParser::SEMICOLON);
}

tree::TerminalNode* cruleParser::ThenExpressionListContext::SEMICOLON(size_t i) {
  return getToken(cruleParser::SEMICOLON, i);
}


size_t cruleParser::ThenExpressionListContext::getRuleIndex() const {
  return cruleParser::RuleThenExpressionList;
}

void cruleParser::ThenExpressionListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cruleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterThenExpressionList(this);
}

void cruleParser::ThenExpressionListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cruleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitThenExpressionList(this);
}


antlrcpp::Any cruleParser::ThenExpressionListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<cruleVisitor*>(visitor))
    return parserVisitor->visitThenExpressionList(this);
  else
    return visitor->visitChildren(this);
}

cruleParser::ThenExpressionListContext* cruleParser::thenExpressionList() {
  ThenExpressionListContext *_localctx = _tracker.createInstance<ThenExpressionListContext>(_ctx, getState());
  enterRule(_localctx, 14, cruleParser::RuleThenExpressionList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(105); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(102);
      thenExpression();
      setState(103);
      match(cruleParser::SEMICOLON);
      setState(107); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << cruleParser::MINUS)
      | (1ULL << cruleParser::RULE)
      | (1ULL << cruleParser::TRUE)
      | (1ULL << cruleParser::FALSE)
      | (1ULL << cruleParser::NIL_LITERAL)
      | (1ULL << cruleParser::NEGATION)
      | (1ULL << cruleParser::SIMPLENAME)
      | (1ULL << cruleParser::DQUOTA_STRING)
      | (1ULL << cruleParser::SQUOTA_STRING)
      | (1ULL << cruleParser::DECIMAL_FLOAT_LIT)
      | (1ULL << cruleParser::HEX_FLOAT_LIT)
      | (1ULL << cruleParser::DEC_LIT)
      | (1ULL << cruleParser::HEX_LIT)
      | (1ULL << cruleParser::OCT_LIT))) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ThenExpressionContext ------------------------------------------------------------------

cruleParser::ThenExpressionContext::ThenExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

cruleParser::AssignmentContext* cruleParser::ThenExpressionContext::assignment() {
  return getRuleContext<cruleParser::AssignmentContext>(0);
}

cruleParser::ExpressionAtomContext* cruleParser::ThenExpressionContext::expressionAtom() {
  return getRuleContext<cruleParser::ExpressionAtomContext>(0);
}

cruleParser::RuleEntryContext* cruleParser::ThenExpressionContext::ruleEntry() {
  return getRuleContext<cruleParser::RuleEntryContext>(0);
}


size_t cruleParser::ThenExpressionContext::getRuleIndex() const {
  return cruleParser::RuleThenExpression;
}

void cruleParser::ThenExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cruleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterThenExpression(this);
}

void cruleParser::ThenExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cruleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitThenExpression(this);
}


antlrcpp::Any cruleParser::ThenExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<cruleVisitor*>(visitor))
    return parserVisitor->visitThenExpression(this);
  else
    return visitor->visitChildren(this);
}

cruleParser::ThenExpressionContext* cruleParser::thenExpression() {
  ThenExpressionContext *_localctx = _tracker.createInstance<ThenExpressionContext>(_ctx, getState());
  enterRule(_localctx, 16, cruleParser::RuleThenExpression);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(112);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(109);
      assignment();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(110);
      expressionAtom(0);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(111);
      ruleEntry();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignmentContext ------------------------------------------------------------------

cruleParser::AssignmentContext::AssignmentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

cruleParser::VariableContext* cruleParser::AssignmentContext::variable() {
  return getRuleContext<cruleParser::VariableContext>(0);
}

cruleParser::ExpressionContext* cruleParser::AssignmentContext::expression() {
  return getRuleContext<cruleParser::ExpressionContext>(0);
}

tree::TerminalNode* cruleParser::AssignmentContext::ASSIGN() {
  return getToken(cruleParser::ASSIGN, 0);
}

tree::TerminalNode* cruleParser::AssignmentContext::PLUS_ASIGN() {
  return getToken(cruleParser::PLUS_ASIGN, 0);
}

tree::TerminalNode* cruleParser::AssignmentContext::MINUS_ASIGN() {
  return getToken(cruleParser::MINUS_ASIGN, 0);
}

tree::TerminalNode* cruleParser::AssignmentContext::DIV_ASIGN() {
  return getToken(cruleParser::DIV_ASIGN, 0);
}

tree::TerminalNode* cruleParser::AssignmentContext::MUL_ASIGN() {
  return getToken(cruleParser::MUL_ASIGN, 0);
}

tree::TerminalNode* cruleParser::AssignmentContext::MOD_ASIGN() {
  return getToken(cruleParser::MOD_ASIGN, 0);
}


size_t cruleParser::AssignmentContext::getRuleIndex() const {
  return cruleParser::RuleAssignment;
}

void cruleParser::AssignmentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cruleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssignment(this);
}

void cruleParser::AssignmentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cruleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssignment(this);
}


antlrcpp::Any cruleParser::AssignmentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<cruleVisitor*>(visitor))
    return parserVisitor->visitAssignment(this);
  else
    return visitor->visitChildren(this);
}

cruleParser::AssignmentContext* cruleParser::assignment() {
  AssignmentContext *_localctx = _tracker.createInstance<AssignmentContext>(_ctx, getState());
  enterRule(_localctx, 18, cruleParser::RuleAssignment);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(114);
    variable(0);
    setState(115);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << cruleParser::ASSIGN)
      | (1ULL << cruleParser::PLUS_ASIGN)
      | (1ULL << cruleParser::MINUS_ASIGN)
      | (1ULL << cruleParser::DIV_ASIGN)
      | (1ULL << cruleParser::MUL_ASIGN)
      | (1ULL << cruleParser::MOD_ASIGN))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(116);
    expression(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

cruleParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* cruleParser::ExpressionContext::LR_BRACKET() {
  return getToken(cruleParser::LR_BRACKET, 0);
}

std::vector<cruleParser::ExpressionContext *> cruleParser::ExpressionContext::expression() {
  return getRuleContexts<cruleParser::ExpressionContext>();
}
